--- a/Engine.Core/Engine.Core.fsproj
+++ b/Engine.Core/Engine.Core.fsproj
@@ -70,6 +70,7 @@
     <Compile Include="DataStore.fs" />
     <Compile Include="TestHost.fs" />
     <Content Include="paket.references" />
+    <Compile Include="SnapshotGC.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Logger\Logger.fsproj">
