--- a/Hosts/VS/TddStudioPackage/TddStudioPackage.csproj
+++ b/Hosts/VS/TddStudioPackage/TddStudioPackage.csproj
@@ -110,6 +110,10 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </COMReference>
+    <Content Include="Telemetry.Instrumentation.Key">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
