--- a/VS/TddStudioPackage/TddStudioPackage.csproj
+++ b/VS/TddStudioPackage/TddStudioPackage.csproj
@@ -266,7 +266,7 @@
       <IncludeOutputGroupsInVSIXLocalOnly>
       </IncludeOutputGroupsInVSIXLocalOnly>
     </ProjectReference>
-    <ProjectReference Include="..\..\TestExecution\TestRuntime\TestRuntime.csproj">
+    <ProjectReference Include="..\..\Test\TestRuntime\TestRuntime.csproj">
       <Project>{0FEA2E86-4EE0-4FD8-949D-C74189B855D9}</Project>
       <Name>TestRuntime</Name>
       <IncludeOutputGroupsInVSIX>BuiltProjectOutputGroup%3bDebugSymbolsProjectOutputGroup%3bBuiltProjectOutputGroupDependencies%3bGetCopyToOutputDirectoryItems%3bSatelliteDllsProjectOutputGroup%3b
@@ -275,7 +275,7 @@
       </IncludeOutputGroupsInVSIXLocalOnly>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
-    <ProjectReference Include="..\..\TestHost.Core\TestHost.Core.fsproj">
+    <ProjectReference Include="..\..\Test\TestHost.Core\TestHost.Core.fsproj">
       <Project>{84693096-CBA0-407A-900A-3B48D21C5459}</Project>
       <Name>TestHost.Core</Name>
       <IncludeOutputGroupsInVSIX>BuiltProjectOutputGroup%3bDebugSymbolsProjectOutputGroup%3bBuiltProjectOutputGroupDependencies%3bGetCopyToOutputDirectoryItems%3bSatelliteDllsProjectOutputGroup%3b
@@ -284,7 +284,7 @@
       </IncludeOutputGroupsInVSIXLocalOnly>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
-    <ProjectReference Include="..\..\TestHost\TestHost.csproj">
+    <ProjectReference Include="..\..\Test\TestHost\TestHost.csproj">
       <Project>{D6D4D595-14E0-4631-9FF5-F33976E08B34}</Project>
       <Name>TestHost</Name>
       <IncludeOutputGroupsInVSIX>BuiltProjectOutputGroup%3bDebugSymbolsProjectOutputGroup%3bBuiltProjectOutputGroupDependencies%3bGetCopyToOutputDirectoryItems%3bSatelliteDllsProjectOutputGroup%3b
