--- a/Engine/Engine.Core/Engine.Core.fsproj
+++ b/Engine/Engine.Core/Engine.Core.fsproj
@@ -5,15 +5,16 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>a4793dff-5fcb-4660-a6de-a041c8f4f003</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>R4nd0mApps.TddStud10.Engine.Server</RootNamespace>
-    <AssemblyName>R4nd0mApps.TddStud10.Engine.Server</AssemblyName>
+    <ProjectGuid>e5fb2292-1833-4c4c-800e-a31ac891a931</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <RootNamespace>R4nd0mApps.TddStud10.Engine.Core</RootNamespace>
+    <AssemblyName>R4nd0mApps.TddStud10.Engine.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
-    <Name>R4nd0mApps.TddStud10.Engine.Server</Name>
+    <Name>R4nd0mApps.TddStud10.Engine.Core</Name>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -23,10 +24,8 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>bin\Debug\R4nd0mApps.TddStud10.Engine.Server.XML</DocumentationFile>
-    <Prefer32Bit>false</Prefer32Bit>
-    <StartArguments>9999</StartArguments>
+    <DocumentationFile>bin\Debug\R4nd0mApps.TddStud10.Engine.Core.XML</DocumentationFile>
+    <OtherFlags>--keyfile:..\..\tddstud10.snk</OtherFlags>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -35,9 +34,8 @@
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>bin\Release\R4nd0mApps.TddStud10.Engine.Server.XML</DocumentationFile>
-    <Prefer32Bit>false</Prefer32Bit>
+    <DocumentationFile>bin\Release\R4nd0mApps.TddStud10.Engine.Core.XML</DocumentationFile>
+    <OtherFlags>--keyfile:..\..\tddstud10.snk</OtherFlags>
   </PropertyGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
@@ -55,54 +53,54 @@
     </Otherwise>
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
   <ItemGroup>
+    <Compile Include="..\..\Common\Constants.fs">
+      <Link>Constants.fs</Link>
+    </Compile>
+    <Compile Include="AssemblyAttributes.fs" />
+    <Compile Include="SafeExec.fs" />
+    <Compile Include="EngineConfig.fs" />
+    <Compile Include="EngineConfigLoader.fs" />
+    <Compile Include="RunStartParamsExtensions.fs" />
+    <Compile Include="StaleMessageIgnoringAgent.fs" />
+    <Compile Include="RunStepFuncBehaviors.fs" />
+    <Compile Include="RunExecutor.fs" />
+    <Compile Include="RunStateTracker.fs" />
+    <Compile Include="TddStud10Runner.fs" />
+    <Compile Include="DataStore.fs" />
+    <Compile Include="TestHost.fs" />
     <Content Include="paket.references" />
-    <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="JsonSerializer.fs" />
-    <Compile Include="Engine.Server.fs" />
-    <None Include="App.config" />
+    <Compile Include="SnapshotGC.fs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\Logger\Logger.fsproj">
+      <Name>Logger</Name>
+      <Project>{e5fb2293-3055-4c4c-800e-a31ac891a931}</Project>
+      <Private>True</Private>
+    </ProjectReference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
-    <ProjectReference Include="..\Common\Domain\Domain.fsproj">
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Xml" />
+    <ProjectReference Include="..\..\Common\Domain\Domain.fsproj">
       <Name>Domain</Name>
       <Project>{e5fb2293-1833-4c4c-800e-a31ac891a931}</Project>
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
-  <Choose>
-    <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.5' Or $(TargetFrameworkVersion) == 'v4.5.1' Or $(TargetFrameworkVersion) == 'v4.5.2' Or $(TargetFrameworkVersion) == 'v4.5.3' Or $(TargetFrameworkVersion) == 'v4.6' Or $(TargetFrameworkVersion) == 'v4.6.1' Or $(TargetFrameworkVersion) == 'v4.6.2' Or $(TargetFrameworkVersion) == 'v4.6.3')">
-      <ItemGroup>
-        <Reference Include="Newtonsoft.Json">
-          <HintPath>..\packages\Newtonsoft.Json\lib\net45\Newtonsoft.Json.dll</HintPath>
-          <Private>True</Private>
-          <Paket>True</Paket>
-        </Reference>
-      </ItemGroup>
-    </When>
-  </Choose>
-  <Choose>
-    <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.5' Or $(TargetFrameworkVersion) == 'v4.5.1' Or $(TargetFrameworkVersion) == 'v4.5.2' Or $(TargetFrameworkVersion) == 'v4.5.3' Or $(TargetFrameworkVersion) == 'v4.6' Or $(TargetFrameworkVersion) == 'v4.6.1' Or $(TargetFrameworkVersion) == 'v4.6.2' Or $(TargetFrameworkVersion) == 'v4.6.3')">
-      <ItemGroup>
-        <Reference Include="Suave">
-          <HintPath>..\packages\Suave\lib\net40\Suave.dll</HintPath>
-          <Private>True</Private>
-          <Paket>True</Paket>
-        </Reference>
-      </ItemGroup>
-    </When>
-  </Choose>
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
+       Other similar extension points exist, see Microsoft.Common.targets.
+  <Target Name="BeforeBuild">
+      <Message Text="BB>>> $(AssemblySearchPaths)" Importance="high" />
+  </Target>
+  <Target Name="AfterBuild">
+      <Message Text="AB>>> $(AssemblySearchPaths)" Importance="high" />
+  </Target>
+  -->
 </Project>
