--- a/VS/TddStudioPackage.Core/TddStudioPackage.Core.fsproj
+++ b/VS/TddStudioPackage.Core/TddStudioPackage.Core.fsproj
@@ -129,7 +129,7 @@
       <Project>{e5fb2293-3055-4c4c-800e-a31ac891a931}</Project>
       <Private>True</Private>
     </ProjectReference>
-    <ProjectReference Include="..\..\Engine.Core\Engine.Core.fsproj">
+    <ProjectReference Include="..\..\Engine\Engine.Core\Engine.Core.fsproj">
       <Name>Engine.Core</Name>
       <Project>{e5fb2292-1833-4c4c-800e-a31ac891a931}</Project>
       <Private>True</Private>
